--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
     <h1>What day is it? 😕</h1>
     <h2>Today is <span id="day">?</span></h2>
 
-    <img src="shipit.png" width="500" alt="shipit">
+    <img src="shipit.jpg" width="500" alt="shipit">
 </body>
 </html>
